--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* .slider{
+  width: 100%; 
+  height: 25px; 
+  background: #d3d3d3; 
+} */
